--- a/10_Project_on_Async/01_Unlimited_colors/index.html
+++ b/10_Project_on_Async/01_Unlimited_colors/index.html
@@ -19,6 +19,7 @@
     <h1>Start should change the Background color every second</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
+    <div><p id="check">Yet to start</p></div>
     <script src="chaiaurcode.js"></script>
   </body>
 </html>
