--- a/11_Api_request_and_promises/39_api_request_by_Ajax.html
+++ b/11_Api_request_and_promises/39_api_request_by_Ajax.html
@@ -53,7 +53,7 @@ https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/readyState
             // !as told to create card so create this 
             const imageLink = data.avatar_url;
             console.log((imageLink));
-            document.getElementById('avatar').src = 'https://avatars.githubusercontent.com/u/121598096?v=4';
+            document.getElementById('avatar').src = imageLink;
             document.getElementById('name').innerHTML = data.login;
             document.getElementsByClassName("role")[0].innerHTML = 'Engineer';
 
